<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_points2">Points</string>
    <string name="lbl_5000">5000</string>
    <string name="lbl_connexion">Connexion</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_user_name">User name</string>
    <string name="msg_nearby_bin_stat">Nearby bin station</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email..</string>
    <string name="search_recycle"><![CDATA[SEARCH&RECYCLE]]></string>
    <string name="find_your_nearest_recycle_station">Find your nearest recycle station</string>
    <string name="inscription">inscription</string>
    <string name="connextion">connextion</string>
    <string name="action_settings">Settings</string>


    <string name="amet_minim_mollit_non_deserunt_ullamco_est_sit_aliqua_dolor_do_amet_sint_velit_officia_consequat_duis_enim_velit_mollit_exercitation_veniam_consequat_sunt_nostrud_amet">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="start">start</string>
    <string name="create_account">Create Account</string>
    <string name="or_signin_with">Or signin with</string>
    <string name="register">Register</string>
    <string name="required">Required</string>
    <string name="camera">camera</string>
    <string name="home">Home</string>
    <string name="learn">Learn</string>
    <string name="map">map</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapfragment">mapFragment</string>
    <string name="takephoto">TakePhoto</string>
    <string name="product_designer_at_abcd">Product designer at ABCD</string>
    <string name="nastya_samantha">Nastya Samantha</string>
    <string name="spacing_available">spacing available</string>
    <string name="username12">username</string>
    <string name="nearby_bin_station">Nearby bin station</string>
    <string name="lbl_learn">Learn</string>
    <string name="lbl_home">Home</string>
    <string name="msg_create_your_acc">Create your Account</string>
    <string name="msg_find_your_neare">Find your nearest recycle station</string>
    <string name="lbl_first_page">first page</string>
    <string name="msg_central_station">Central station gate A</string>
    <string name="lbl_fedelica_toraka">Fedelica Toraka</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="msg_add_your_debit">Add your debit / credit card</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_inscription">Inscription</string>
    <string name="lbl_or_signin_with">Or signin with</string>
    <string name="lbl_cardholder_name">Cardholder Name</string>
    <string name="msg_have_an_account">Have an account ?</string>
    <string name="msg_angelina_carame">angelina caramelo</string>
    <string name="lbl_map">Map</string>
    <string name="lbl_camera_scan">camera / scan</string>
    <string name="lbl_april_16_1988">April 16,1988</string>
    <string name="msg_select_your_loc">Select your location</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_150m_3min">150m | 3min</string>
    <string name="lbl_select_region">Select Region</string>
    <string name="lbl_profile_details">Profile details</string>
    <string name="lbl_profile2">profile</string>
    <string name="lbl_slash_screen">slash screen</string>
    <string name="msg_your_data_is_be">your data is being processed and you can already enjoy all the features of the application.</string>
    <string name="msg_84_905_07_00_1">+84 905 07 00 17</string>
    <string name="lbl_pending_list">Pending list</string>
    <string name="lbl_metal">Metal</string>
    <string name="lbl_superuser">\@superuser</string>
    <string name="lbl_topic_for_you">Topic for you</string>
    <string name="msg_get_your_own_re">Get your own reusable bottle</string>
    <string name="lbl_larry_davis">Larry Davis</string>
    <string name="lbl_my_account">My Account</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_00_002">00/00</string>
    <string name="lbl_select_matrial">Select Matrial</string>
    <string name="msg_amet_minim_moll">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="lbl_0000">0000</string>
    <string name="msg_pending_list_de">Pending List Details</string>
    <string name="lbl_request_2">Request 2</string>
    <string name="lbl_request_1">Request 1</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_request_4">Request 4</string>
    <string name="lbl_recycled">RECYCLED</string>
    <string name="lbl_request_3">Request 3</string>
    <string name="lbl_case_sucess">Case Sucess</string>
    <string name="lbl_400g">400g</string>
    <string name="lbl_paper">Paper</string>
    <string name="lbl_select_material">Select material</string>
    <string name="lbl_wallet2">wallet</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_3222">3222</string>
    <string name="lbl_add_card">Add Card
</string>
    <string name="lbl_birthday">Birthday</string>
    <string name="msg_waste_to_artwor">Waste to artwork</string>
    <string name="lbl_rejected">rejected</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_saved_co2">SAVED CO2</string>
    <string name="lbl_matrials">Matrials</string>
    <string name="msg_mot_de_passe_ou">Mot de passe oubli? ?</string>
    <string name="lbl_expiration_date">Expiration Date</string>
    <string name="lbl_points">POINTS</string>
    <string name="lbl_oslo_norway">Oslo,Norway</string>
    <string name="msg_product_designe">Product designer at ABCD</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">2</string>
    <string name="lbl_plastic">Plastic</string>
    <string name="lbl_pending_list2">Pending List</string>
    <string name="lbl_infoone">infoOne</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="lbl_learn_details">Learn Details</string>
    <string name="lbl_shows">Shows</string>
    <string name="msg_ways_to_reduce">Ways to reduce waste</string>
    <string name="msg_you_can_put_the">You can put the reusable bottle to use ,save money, and reduce waste
Reduce your chances of purchasing more expensive beverages on the go.
This will elimanate the one-time use containers they come in </string>
    <string name="lbl_create_account">create account</string>
    <string name="lbl_glass">Glass</string>
    <string name="lbl_good_to_know">Good to know</string>
    <string name="msg_select_material">Select materials</string>
    <string name="lbl_see_all">See all</string>
    <string name="lbl_2_pt">+2 pt</string>
    <string name="lbl_login2">login</string>
    <string name="lbl_case_failed">Case Failed</string>
    <string name="lbl_infotwo">infoTwo</string>
    <string name="lbl_10">10</string>
    <string name="msg_identify_the_pl">Identify the plant</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed </string>
    <string name="lbl_saved_co22">Saved-CO2</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_kohaku">\@kohaku</string>
    <string name="lbl_london_uk">London,UK</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_sandy_chungus">Sandy Chungus</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_email">Email</string>
    <string name="msg_what_plastics_c">What plastics can be recycled??</string>
    <string name="lbl_success">Success</string>
    <string name="lbl_0">+0</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">+2 </string>
    <string name="msg_30_of_spacing">30% of spacing available</string>
    <string name="lbl_5">5</string>
    <string name="lbl_7">7</string>
    <string name="msg_learn_how_you_c">Learn how you can make small changes that are eco-friendly and will have a lasting impact</string>
    <string name="lbl_8">+8</string>
    <string name="lbl_pt">pt</string>
    <string name="msg_artists_use_rec">Artists use recycled or resed objects to make attractive pieces of contemporary arts</string>
    <string name="lbl_failed">Failed</string>
    <string name="lbl_got_it">Got it </string>
    <string name="lbl_login">Login</string>
    <string name="lbl_mot_de_passe">Mot de passe</string>
    <string name="lbl_0_pt">+0 pt</string>
    <string name="lbl_home_page">Home Page</string>
    <string name="lbl_tunis_tunisia">Tunis,Tunisia</string>
    <string name="msg_hurray_we_iden">Hurray, we identified the plant!</string>
    <string name="lbl_nastya_samantha">Nastya Samantha</string>
    <string name="lbl_newyork_us">NewYork,US</string>
    <string name="msg_add_card_add_yo">Add Card
Add your debit / credit card</string>
    <string name="lbl_search_recycle">SEARCH&amp;RECYCLE</string>
    <string name="lbl_accepted">Accepted </string>
    <string name="msg_sunday_9_octobe">Sunday 9 October 2022</string>
    <string name="msg_freeslab88_gmai">freeslab88@gmail.com</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="confirm_password">confirm password</string>
    <string name="api_key" />
    <string name="search_and_recycle">Search And Recycle</string>
    <string name="est_sit_aliqua_dolor_dmet_sint_velit_officia_consequat_duis_enim_velit_mollit_exercitation_veniam_consequat_sunt_nostrud_amet">est_sit_aliqua_dolor_dmet_sint_velit_officia_consequat_duis_enim_velit_mollit_exercitation_veniam_consequat_sunt_nostrud_amet</string>
    <string name="title_activity_photo">photoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_camera">cameraActivity</string>
</resources>
