<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_5">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/onBoardingImg1"
        android:layout_width="336dp"
        android:layout_height="314dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_page1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtH4BoldDesktop"
/>
    <TextView
        android:id="@+id/txtH4BoldDesktop"
        android:fontFamily="@font/interbold"
        android:layout_width="329dp"
        android:textSize="25sp"
        android:layout_height="32dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:text="@string/find_your_nearest_recycle_station"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoardingImg1"
     />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="313dp"
        android:layout_height="124dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="7dp"
        android:fontFamily="@font/interregular"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:text="@string/amet_minim_mollit_non_deserunt_ullamco_est_sit_aliqua_dolor_do_amet_sint_velit_officia_consequat_duis_enim_velit_mollit_exercitation_veniam_consequat_sunt_nostrud_amet"
        app:layout_constraintEnd_toEndOf="@id/txtH4BoldDesktop"
        app:layout_constraintStart_toStartOf="@id/txtH4BoldDesktop"
        app:layout_constraintTop_toBottomOf="@id/txtH4BoldDesktop"
        app:layout_constraintBottom_toTopOf="@+id/start"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        style="@style/btnSolidRoundedOutline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:lineSpacingExtra="1dp"
        android:paddingStart="30dp"
        android:paddingTop="13dp"
        android:paddingEnd="30dp"
        android:paddingBottom="13dp"
        android:singleLine="true"

        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription"
        app:layout_constraintBottom_toBottomOf="parent"
android:layout_marginBottom="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/start"        />
</androidx.constraintlayout.widget.ConstraintLayout>