<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_5"
    tools:context=".onboarding.screens.SecondScreen">

    <ImageView
        android:id="@+id/screen2_iv"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/img_page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtH4BoldDesktop"
        android:layout_width="329dp"
        android:layout_height="32dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/interbold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:text="@string/find_your_nearest_recycle_station"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen2_iv" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="300dp"
        android:layout_height="92dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="7dp"
        android:fontFamily="@font/interregular"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:text="@string/est_sit_aliqua_dolor_dmet_sint_velit_officia_consequat_duis_enim_velit_mollit_exercitation_veniam_consequat_sunt_nostrud_amet"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="@id/txtH4BoldDesktop"
        app:layout_constraintStart_toStartOf="@id/txtH4BoldDesktop"
        app:layout_constraintTop_toBottomOf="@id/txtH4BoldDesktop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lineSpacingExtra="1dp"
        android:paddingStart="30dp"
        android:paddingTop="13dp"

        android:paddingEnd="30dp"
        android:paddingBottom="13dp"
        android:singleLine="true"
        android:text="@string/start"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription"
        style="@style/btnSolidRoundedOutline_3"
        tools:shadowRadius="@integer/material_motion_duration_medium_1" />
</androidx.constraintlayout.widget.ConstraintLayout>